#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(ibus-pye, 0.2.1, jallyx@163.com)
AC_CONFIG_SRCDIR(config.h.in)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(foreign dist-bzip2 -Wall)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS(stdlib.h string.h unistd.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_MODE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS(mkdir realpath strchr strndup)

AC_ARG_ENABLE([message],
              AS_HELP_STRING([--disable-message],
                             [disable print message @<:@default=yes@:>@]),
              [enable_message=$enableval],
              [enable_message=yes])
if test "x${enable_message}" = "xyes" ; then
  AC_DEFINE(MESSAGE, 1, [Define if you want to print message])
fi
AC_ARG_ENABLE([warning],
              AS_HELP_STRING([--disable-warning],
                             [disable print warning @<:@default=yes@:>@]),
              [enable_warning=$enableval],
              [enable_warning=yes])
if test "x${enable_warning}" = "xyes" ; then
  AC_DEFINE(WARNING, 1, [Define if you want to print warning])
fi
AC_ARG_ENABLE([trace],
              AS_HELP_STRING([--enable-trace],
                             [enable print trace @<:@default=no@:>@]),
              [enable_trace=$enableval],
              [enable_trace=no])
if test "x${enable_trace}" = "xyes" ; then
  AC_DEFINE(TRACE, 1, [Define if you want to print trace])
fi

dnl In Autoconf, ${datadir} --> ${datarootdir} --> ${prefix}
dnl In Autoconf, ${libexecdir} --> ${exec_prefix}
test "x${prefix}" = "xNONE" && prefix="${ac_default_prefix}"
test "x${exec_prefix}" = "xNONE" && exec_prefix="${prefix}"
datapath=`eval echo ${datadir}`
datapath=`eval echo ${datapath}`
AC_DEFINE_UNQUOTED(__PHRASE_PATH, "${datapath}/ibus-pye/phrase", [Ibus-pye Phrase Directory])
AC_DEFINE_UNQUOTED(__PIXMAPS_PATH, "${datapath}/ibus-pye/pixmaps", [Ibus-pye Pixmaps Directory])
libexecpath=`eval echo ${libexecdir}`
AC_DEFINE_UNQUOTED(__LIBEXEC_PATH, "${libexecpath}", [System Libexec Directory])

ibus_modules="ibus-1.0 >= 1.4.0"
PKG_CHECK_MODULES(IBUS, [$ibus_modules])
gtk_modules="gtk+-2.0 >= 2.14.0"
PKG_CHECK_MODULES(GTK, [$gtk_modules])
pye_modules="pye >= 0.2.1"
PKG_CHECK_MODULES(PYE, [$pye_modules])

AC_CONFIG_FILES(Makefile phrase/Makefile pixmaps/Makefile src/Makefile src/pye.xml.in)
AC_OUTPUT
