#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.63)
AC_INIT(configure.in)
AC_CONFIG_SRCDIR(src/pye.cpp)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(pye, 0.1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdint.h stdlib.h string.h strings.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_INT8_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([bzero memmove strcspn strerror strspn])

AC_ARG_ENABLE(message,
		[  --disable-message       disable print message], ,
		enable_message=yes)
if test "${enable_message}" = yes ; then
AC_DEFINE(MESSAGE)
fi
AC_ARG_ENABLE(warning,
		[  --disable-warning       disable print warning], ,
		enable_warning=yes)
if test "${enable_warning}" = yes ; then
AC_DEFINE(WARNING)
fi
AC_ARG_ENABLE(trace,
		[  --enable-trace          enable print trace], ,
		enable_trace=no)
if test "${enable_trace}" = yes ; then
AC_DEFINE(TRACE)
fi

glib_modules="glib-2.0 >= 2.16.0"
PKG_CHECK_MODULES(GLIB, [$glib_modules])
PACKAGE_CFLAGS="${GLIB_CFLAGS}"
PACKAGE_LIBS="${GLIB_LIBS}"
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT(Makefile src/Makefile src/engine/Makefile src/include/Makefile \
	src/tools/Makefile src/utils/Makefile)
