#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.63)
AC_INIT(configure.in)
AC_CONFIG_SRCDIR(src/main.cpp)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ibus-pye, 0.1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_ARG_ENABLE(message,
		[  --disable-message       disable print message], ,
		enable_message=yes)
if test "${enable_message}" = yes ; then
AC_DEFINE(MESSAGE)
fi
AC_ARG_ENABLE(warning,
		[  --disable-warning       disable print warning], ,
		enable_warning=yes)
if test "${enable_warning}" = yes ; then
AC_DEFINE(WARNING)
fi
AC_ARG_ENABLE(trace,
		[  --enable-trace          enable print trace], ,
		enable_trace=no)
if test "${enable_trace}" = yes ; then
AC_DEFINE(TRACE)
fi

glib_modules="glib-2.0 >= 2.16.0"
PKG_CHECK_MODULES(GLIB, [$glib_modules])
ibus_modules="ibus-1.0 >= 1.0.0"
PKG_CHECK_MODULES(IBUS, [$ibus_modules])
PACKAGE_CFLAGS="${GLIB_CFLAGS} ${IBUS_CFLAGS}"
PACKAGE_LIBS="${GLIB_LIBS} ${IBUS_LIBS}"
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

AC_OUTPUT(Makefile pixmaps/Makefile src/Makefile src/pye.xml.in \
	src/engine/Makefile src/include/Makefile src/tools/Makefile \
	src/utils/Makefile)
